--- a/style.css
+++ b/style.css
@@ -15,3 +15,21 @@
  .nav-link:hover {
    color: #5495ff;
  }
+
+ .btn:hover {
+   background-color: #fff;
+   color: #2176FF;
+   transition: color .1s ease-in, backgound-color .1s ease-in;
+
+ }
+
+ .btn:active {
+   font-size: 18px;
+   transition: font-size .1s ease-in-out;
+ }
+
+ .activity {
+   border: 1px solid #2176FF;
+   cursor: pointer;
+   text-decoration: none
+ }
